# gmprime

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
CMake/Modules/: FindGMP.cmake
include/: gmprime.hpp
src/: gmprime.cpp  gmprime.hpp  gmprime.tpp  gmprime_adapter.tpp  gmprime_ios.hpp  gmprime_literals.hpp  gmprime_reference.tpp  gmprime_stream.tpp
tests/: CMakeLists.txt  main.cpp
